| Summary: | ASTERISK-27990: res_rtp_asterisk: Requires OpenSSL in Developer Mode. | ||
| Reporter: | Alexander Traud (traud) | Labels: | patch |
| Date Opened: | 2018-07-27 07:45:36 | Date Closed: | 2018-08-01 04:24:30 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 13.22.0 15.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) openssl_no_srtp_fix.patch | |
| Description: | This is a regression, introduced by myself in [Gerrit 9184|https://gerrit.asterisk.org/9184]. When Asterisk was configured with {{--enable-dev-mode}}, and the headers of OpenSSL are not installed, {{make}} fails with{code}res_rtp_asterisk.c:273:35: error: "OPENSSL_VERSION_NUMBER" is not defined, evaluates to 0 [-Werror=undef]{code}This happens, because {{HAVE_OPENSSL}} is not checked. The attached patch fixes this issue. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-07-27 07:45:38.001-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-08-01 04:24:31.367-0500 Change 9736 merged by Joshua Colp: res_rtp_asterisk: In Developer Mode, do not require OpenSSL. [https://gerrit.asterisk.org/9736|https://gerrit.asterisk.org/9736] By: Friendly Automation (friendly-automation) 2018-08-01 04:24:39.924-0500 Change 9737 merged by Joshua Colp: res_rtp_asterisk: In Developer Mode, do not require OpenSSL. [https://gerrit.asterisk.org/9737|https://gerrit.asterisk.org/9737] By: Friendly Automation (friendly-automation) 2018-08-01 04:24:48.737-0500 Change 9739 merged by Joshua Colp: res_rtp_asterisk: In Developer Mode, do not require OpenSSL. [https://gerrit.asterisk.org/9739|https://gerrit.asterisk.org/9739] By: Friendly Automation (friendly-automation) 2018-08-01 04:24:56.451-0500 Change 9738 merged by Joshua Colp: res_rtp_asterisk: In Developer Mode, do not require OpenSSL. [https://gerrit.asterisk.org/9738|https://gerrit.asterisk.org/9738] | ||